# openstcisp

./: CMakeLists.txt  readme.md
.github/workflows/: msvc-build.yml
cmake/: find_libhidapi.cmake
src/: BinFile.cpp  BinFile.h  CdcMsg.cpp  CdcMsg.h  CfgIni.cpp  CfgIni.h  Crc24.cpp  Crc24.h  FileFmtConverter.cpp  FileFmtConverter.h  Hex2Bin.cpp  Hex2Bin.h  HexFile.cpp  HexFile.h  main.cpp  parser.cpp  parser.h  stcisp.c  stcisp.h
